Dependency & JVM upgrades
Removes Oracle JDK-specific tuning flags, and GC tuning flags that are
gone in recent JVMs. Upgrades to 0.8.3-SNAPSHOT. Bumps versions of
Clojure and tools.cli.